style.css
body, html {
    margin: 0;
    padding: 0;
    width: 100%;
    height: 105vh;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #000000;
    color: #E7E0EC;
    font-family: "Inter", sans-serif;
    font-family: Arial, sans-serif;
    
    -ms-overflow-style: none; /* IE and Edge */
    scrollbar-width: none; /* Firefox */
}

.no-scroll {
    overflow: hidden;
    position: fixed;
    width: 100%;
    height: 100%;
}

/* Hide scrollbar for WebKit browsers (Chrome, Safari) */
body::-webkit-scrollbar {
    display: none;
}

.video-container {
    display: none; /* Initially hidden */
    top: 0;
    position: fixed;
    width: 100%;
    height: 100%;
        justify-content: center;  /* Center horizontally */
    align-items: center;  /* Center vertically */
    overflow: hidden;
    background: radial-gradient(circle, rgba(0, 0, 0, 0) 70%, rgba(0, 0, 0, 1) 100%); /* Smooth transition effect */
    transition: background-color 4s ease-in-out; /* Smooth transition effect for background color */
}

video {
    width: 100%;
    height: 100%;
    object-fit: cover;
    align-content: center;
    
}

.text-container {
    display: none; /* Initially hidden */
    position: absolute;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100%;
    z-index: 2; /* Ensure text is on top */
    opacity: 0; /* Start hidden */
    transition: opacity 1s ease-in-out; /* Smooth transition for text opacity */
}

#reclaim-text {
    font-size: 3rem;
    font-weight: 700;
    text-align: center;
}

#rolling-text {
    display: inline-block;
    font-weight: bold;
    overflow: hidden;
    vertical-align: bottom; /* Align the rolling text properly with the rest */
}
.loading-text {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    font-size: 1.3rem;
    z-index: 10;
}
#app-name {
    font-size: 2.5rem;
    margin-bottom: 2px;
    margin-top: 10px;
}
#app-desc {
    text-align: center;
}
#app-logo {
    border-radius: 50%;
    width: 100px;
    height: 100px;
    margin: 10px;
}

.info-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    opacity: 0; /* Start hidden */
    padding: 8px;
}
.glow-on-hover {
    width: 220px;
    height: 50px;
    margin-top: 12px;
    font-size: 1.1rem;
    border: none;
    outline: none;
    color: #fff;
    background: #111;
    cursor: pointer;
    position: relative;
    z-index: 0;
    border-radius: 10px;
}

.glow-on-hover:before {
    content: '';
    background: linear-gradient(45deg, #E7E0EC, #444444, #555555, #666666, #ffffff, #666666, #555555, #444444);
    position: absolute;
    top: -2px;
    left: -2px;
    background-size: 400%;
    z-index: -1;
    filter: blur(5px);
    width: calc(100% + 4px);
    height: calc(100% + 4px);
    animation: glowing 20s linear infinite;
    opacity: 1; /* Keep the opacity at 1 to make the glow always visible */
    transition: opacity .3s ease-in-out;
    border-radius: 10px;
}

.glow-on-hover:active {
    color: #000;
}

.glow-on-hover:active:after {
    background: transparent;
}

.glow-on-hover:after {
    z-index: -1;
    content: '';
    position: absolute;
    width: 100%;
    height: 100%;
    background: #111;
    left: 0;
    top: 0;
    border-radius: 10px;
}

@keyframes glowing {
    0% { background-position: 0 0; }
    50% { background-position: 400% 0; }
    100% { background-position: 0 0; }
}
.scroll-message {
    position: fixed;
    bottom: 30px; 
    left: 50%;
    transform: translateX(-50%);
    padding: 10px 20px;
    font-size: 0.9rem;
    text-align: center;
    opacity: 0;
    visibility: hidden;
    transition: opacity 0.5s ease-in-out, visibility 0.5s ease-in-out;
    z-index: 1000; /* Ensure it appears above other content */
}

